# Clawmark_GLIB

./: Cargo.toml  README.md  install.sh
.cargo/: config.toml
.github/workflows/: release.yml
schema/: schema.sql
skills/: SKILL.md
src/: adapter.rs  cli.rs  db.rs  embed_client.rs  embedding.rs  main.rs
